Fix join action in the dark mode

--- a/apps/web/components/JoinButton/Link/index.module.scss
+++ b/apps/web/components/JoinButton/Link/index.module.scss
@@ -31,7 +31,7 @@
 }
 
 .highlight.lighter {
-  background: var(--color-background);
+  background: white;
   border: 1px solid white;
   color: black;
 }
